--- a/resources/strings/strings-zh-TW.properties
+++ b/resources/strings/strings-zh-TW.properties
@@ -55,6 +55,9 @@ editLabelDetail=修改所選區塊的標籤
 nextImg=下一張圖片
 useDefaultLabel=使用預設標籤
 useDifficult=有難度的
+useMask=Mask
+useGlasses=Glasses
+useCap=Cap
 boxLabelText=區塊的標籤
 labels=標籤
 autoSaveMode=自動儲存模式
