--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -55,6 +55,9 @@ shapeFillColorDetail=Change the fill color for this specific shape
 showHide=Show/Hide Label Panel
 useDefaultLabel=Use default label
 useDifficult=difficult
+useMask=Mask
+useGlasses=Glasses
+useCap=Cap
 boxLabelText=Box Labels
 labels=Labels
 autoSaveMode=Auto Save mode
