--- a/resources/strings/strings-zh-CN.properties
+++ b/resources/strings/strings-zh-CN.properties
@@ -55,6 +55,9 @@ editLabelDetail=修改当前所选的区块颜色
 nextImg=下一个图片
 useDefaultLabel=使用预设标签
 useDifficult=有难度的
+useMask=Mask
+useGlasses=Glasses
+useCap=Cap
 boxLabelText=区块的标签
 labels=标签
 autoSaveMode=自动保存模式
